# docs/api/openapi.json
@@ -3688,6 +3688,18 @@
           "product": {
             "$ref": "#/components/schemas/ProductRef"
           },
+          "purchase_id": {
+            "anyOf": [
+              {
+                "format": "uuid",
+                "type": "string"
+              },
+              {
+                "type": "null"
+              }
+            ],
+            "title": "Purchase Id"
+          },
           "purchase_line_id": {
             "anyOf": [
               {
